k8s/blog-ingress-prod.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog-ingress
  namespace: blog
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - blog.ik.am
    - blog-api.ik.am
    - zipkin.ik.am
    - note.ik.am
    # wget https://raw.githubusercontent.com/aws-quickstart/quickstart-pivotal-cloudfoundry/master/scripts/gen_ssl_certs.sh
    # chmod +x gen_ssl_certs.sh 
    # ./gen_ssl_certs.sh ik.am
    # kubectl create secret -n blog tls ik-am-tls --cert=ik.am.crt --key=ik.am.key
    secretName: ik-am-tls
  rules:
  - host: blog.ik.am
    http:
      paths:
      - backend:
          serviceName: blog-ui-service
          servicePort: 8080
  - host: blog-api.ik.am
    http:
      paths:
      - backend:
          serviceName: blog-api-service
          servicePort: 8080
  - host: zipkin.ik.am
    http:
      paths:
      - backend:
          serviceName: blog-zipkin-service
          servicePort: 9411
  - host: note.ik.am
    http:
      paths:
      - backend:
          serviceName: cms-service
          servicePort: 8080
