k8s/blog-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog-ingress
  namespace: blog
  annotations:
    kubernetes.io/ingress.global-static-ip-name: blog-ik-am # gcloud compute addresses create blog-ik-am --global
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - secretName: blog-tls
  rules:
  - host: blog.ik.am
    http:
      paths:
      - backend:
          serviceName: blog-ui-service
          servicePort: 8080
  - host: blog-ui-35-190-30-50.sslip.io
    http:
      paths:
      - backend:
          serviceName: blog-ui-service
          servicePort: 8080
  - host: blog-api-35-190-30-50.sslip.io
    http:
      paths:
      - backend:
          serviceName: blog-api-service
          servicePort: 8080
  - host: blog-point-35-190-30-50.sslip.io
    http:
      paths:
      - backend:
          serviceName: blog-point-service
          servicePort: 8080
  - host: blog-webhook-35-190-30-50.sslip.io
    http:
      paths:
      - backend:
          serviceName: blog-webhook-service
          servicePort: 8080
